bakkie_derive/tests/ui/fail/tool_duplicate_attribute.stderr
error: duplicate 'name' attribute
 --> tests/ui/fail/tool_duplicate_attribute.rs:3:24
  |
3 | #[tool(name = "first", name = "second")]
  |                        ^^^^
